my second commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   
  	<!-- //header -->
-				<div >
+				<div id="home">
 				   <img src="images/bg2.jpg" id="img" />
 				   <div class="im-text">
 				     <a><button class="name"><a>yogesh</a></button></a>
